fix spacing, delete placeholder blog posts

--- a/css/index.css
+++ b/css/index.css
@@ -107,16 +107,16 @@ li {
 	line-height: 1.5;
 }
 
-main,
+home,
 footer {
 	padding: 1rem;
 }
 
-main {
+home {
 	padding-top: 2rem;
 }
 
-main :first-child {
+home :first-child {
 	margin-top: 0;
 }
 
@@ -365,7 +365,6 @@ body {
 main {
 	display: flex;
 	flex-direction: column;
-	gap: 2rem;
 	padding: 4rem;
 	padding-top: 2rem;
 	padding-bottom: 4rem;
@@ -382,7 +381,7 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 3rem 0 1rem;
+	margin: 1rem 0 1rem;
 	font-weight: 800;
 	line-height: 1.25;
 }
@@ -862,4 +861,10 @@ footer {
 
 .nav-item a[href][aria-current="page"]:hover {
 	background-color: oklch(0 0 0 / 0.1);
+}
+
+#home {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
 }
